[package]
name = "ledger-zcash"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger = "0.2.5"
anyhow = "1.0.42"
hex = "0.4.3"
secp256k1 = "0.20.2"

tiny-bip39 = "0.8"
tiny-hderive = "0.3.0"
dotenv = "0.15.0"
slip10 = "0.4.3"
ed25519-bip32 = "0.4.1"
hmac = "0.12.1"
sha2 = "0.10.2"
#jubjub = "^0.6"

[dependencies.zcash_primitives]
path = "/home/hanh/projects/librustzcash/zcash_primitives"

[dependencies.zcash_client_backend]
path = "/home/hanh/projects/librustzcash/zcash_client_backend"

[patch.crates-io]
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "dd57b430dee7c0b163f4035fef2280cd1935036c" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "3ddf6c49f7484ed1295bd5351317bbfe49e14472" }
